results/SVCOMP/specgen/log-URLDecoder01-2024_03_07_16_58_59.txt
public class Main {

  //@ requires arg != null;
  //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
  //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
  public static boolean f(String arg) {

    String s1 = "some-url+" + arg;

    try {
      String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
      //@ assert s2.equals(java.net.URLDecoder.decode(s1, "UTF-8"));
      if (!s2.startsWith("some")) {
        return false;
      }
    } catch (java.io.UnsupportedEncodingException e) {
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the code. 
// Here are the JML specifications for the provided Java program:

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// Main.java

public class Main {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\exists String s1; s1.equals("some-url+" + arg));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;
        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

